# yc-voice-agents-hackathon

./: .gitignore  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  Dashboard.jsx  Landing.jsx  index.css
frontend/src/components/: CallModal.jsx  EvalBadge.jsx  FleetStats.jsx  LiveCallStrip.jsx  LoadsTable.jsx  RecordsTable.jsx  RiskBadge.jsx  RiskMeter.jsx  ShipmentCard.jsx
server/: Dockerfile  Procfile  api_server.py  auto_improve.py  bot-freightvoice-gpt.py  bot-freightvoice.py  call_eval.py  call_recorder.py  cekura_client.py  eval_agent.py  freight_backend.py  freight_scenarios.py  outbound.py  pcc-deploy.toml  post_call.py  prompt_store.py  pyproject.toml  risk_scorer.py  self_improve.py  think_filter.py
